adciona estilização de componentes via bootstrap

--- a/01-componentes.html
+++ b/01-componentes.html
@@ -11,6 +11,33 @@
     <h1>Conhecendo alguns componentes</h1>
     <hr>
 
+    <h2>Alerts</h2>
+    <p class="alert alert-success">cadastro realizado com sucesso!</p>
+    <p class="alert alert-danger">ouve um erro al cadastrar!</p>
+
+    <div class="alert alert-info">
+        <h3>informações adcionais</h3>
+        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis perspiciatis nisi tempora dolorum? Earum ullam, maxime incidunt distinctio facilis quia impedit veritatis sit rerum consequuntur delectus labore nam minus.</p>
+    </div>
+
+    <hr>
+    <h2>botões e links</h2>
+
+    <button class="btn btn-primary">um</button>
+    <button class="btn btn-dark">dois</button>
+    <button class="btn btn-success">três</button>
+    <a href="" class="btn btn-warning btn-lg">link qualquer</a>
+
+    <hr>
+
+    <h2>Listas</h2>
+
+    <ul class="list-group">
+        <li class="list-group-item">um</li>
+        <li class="list-group-item list-group-item-primary">dois</li>
+        <li class="list-group-item">três</li>
+    </ul>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
