--- a/04-design-responsivo.html
+++ b/04-design-responsivo.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>design responsivo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
     <div class="container">
         <h1 class="text-center">Recursos de desgn responsivo</h1>
 
         <hr>
         <h2>Exemplo 1: aplicando colunas no grid (auto-layout)</h2>
+        <!--a classe row indica que que ali e uma linha (row) que tera colunas no layout-->
+        <div class="row gx-2">
+            <!--a classe "col" indica que esta é uma coluna do layout-->
+            <div class="col">
+                <p class="bg-primary-subtle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, cum enim. Alias officiis
+                    mollitia numquam voluptates exercitationem sunt aperiam nihil, molestiae sequi incidunt dolorem
+                    obcaecati laudantium nisi at autem eveniet.</p>
+            </div>
+            <div class="col">
+                <p class="bg-success-subtle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, porro! Nobis sunt similique voluptate
+                    corrupti aspernatur assumenda, veniam modi dignissimos facilis repellat, commodi porro unde eveniet,
+                    iste numquam. Error, atque.</p>
+            </div>
+
+        </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
