--- a/04-design-responsivo.html
+++ b/04-design-responsivo.html
@@ -30,6 +30,20 @@
             </div>
 
         </div>
+        <hr>
+        <h2>Exemplo 2: colunas com tamanhos diferentes</h2>
+        <div class="row">
+            <div class="col-3">
+                <h3 class="text-center">Coluna A</h3>
+
+                <p class="bg-danger-subtle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, consequatur cum nobis hic voluptatum similique recusandae esse rem ab unde nisi accusantium, adipisci nostrum, commodi quam atque soluta saepe totam.</p>
+            </div>
+            <div class="col-9">
+                <h3 class="text-center">Coluna B</h3>
+                <p class="bg-dark-subtle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, consequatur cum nobis hic voluptatum similique recusandae esse rem ab unde nisi accusantium, adipisci nostrum, commodi quam atque soluta saepe totam.</p>
+                <p class="bg-dark-subtle">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id hic repudiandae ad sunt aperiam repellat.</p>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
