cria colunas com tamanhos de acordo com as telas com bootstrap

--- a/04-design-responsivo.html
+++ b/04-design-responsivo.html
@@ -19,12 +19,14 @@
         <div class="row gx-2">
             <!--a classe "col" indica que esta é uma coluna do layout-->
             <div class="col">
-                <p class="bg-primary-subtle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, cum enim. Alias officiis
+                <p class="bg-primary-subtle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, cum
+                    enim. Alias officiis
                     mollitia numquam voluptates exercitationem sunt aperiam nihil, molestiae sequi incidunt dolorem
                     obcaecati laudantium nisi at autem eveniet.</p>
             </div>
             <div class="col">
-                <p class="bg-success-subtle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, porro! Nobis sunt similique voluptate
+                <p class="bg-success-subtle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, porro! Nobis
+                    sunt similique voluptate
                     corrupti aspernatur assumenda, veniam modi dignissimos facilis repellat, commodi porro unde eveniet,
                     iste numquam. Error, atque.</p>
             </div>
@@ -36,12 +38,34 @@
             <div class="col-3">
                 <h3 class="text-center">Coluna A</h3>
 
-                <p class="bg-danger-subtle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, consequatur cum nobis hic voluptatum similique recusandae esse rem ab unde nisi accusantium, adipisci nostrum, commodi quam atque soluta saepe totam.</p>
+                <p class="bg-danger-subtle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, consequatur
+                    cum nobis hic voluptatum similique recusandae esse rem ab unde nisi accusantium, adipisci nostrum,
+                    commodi quam atque soluta saepe totam.</p>
             </div>
             <div class="col-9">
                 <h3 class="text-center">Coluna B</h3>
-                <p class="bg-dark-subtle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, consequatur cum nobis hic voluptatum similique recusandae esse rem ab unde nisi accusantium, adipisci nostrum, commodi quam atque soluta saepe totam.</p>
-                <p class="bg-dark-subtle">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id hic repudiandae ad sunt aperiam repellat.</p>
+                <p class="bg-dark-subtle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, consequatur
+                    cum nobis hic voluptatum similique recusandae esse rem ab unde nisi accusantium, adipisci nostrum,
+                    commodi quam atque soluta saepe totam.</p>
+                <p class="bg-dark-subtle">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id hic repudiandae
+                    ad sunt aperiam repellat.</p>
+            </div>
+        </div>
+        <hr>
+
+        <h2>Exeplo 03: colunas com tamanhos de acordo com as telas</h2>
+        <p> pusando as classes <b>breakpoints</b>:
+            sm (>=576px), md (>= 768), lg(>=992px), xl(>=1200px), xxl(>=1400px).</p>
+        <div class="row gx-1">
+            <div class="col-md">
+                <p class="bg-danger-subtle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, consequatur
+                    cum nobis hic voluptatum similique recusandae esse rem ab unde nisi accusantium, adipisci nostrum,
+                    commodi quam atque soluta saepe totam.</p>
+            </div>
+            <div class="col-md">
+                <p class="bg-waring-subtle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, consequatur
+                    cum nobis hic voluptatum similique recusandae esse rem ab unde nisi accusantium, adipisci nostrum,
+                    commodi quam atque soluta saepe totam.</p>
             </div>
         </div>
     </div>
