cria Exemplo 04: combinando diferentes breakpoints com bootstrap

--- a/04-design-responsivo.html
+++ b/04-design-responsivo.html
@@ -68,6 +68,23 @@
                     commodi quam atque soluta saepe totam.</p>
             </div>
         </div>
+
+        <hr>
+        <h2>Exemplo 04: combinando diferentes breakpoints </h2>
+
+        <div class="row gx-1">
+           <div class="col-md col-lg-3 col-xl-4">
+            <p class="bg-dark-subtle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti exercitationem odit quas similique doloremque non mollitia quisquam assumenda, magnam praesentium temporibus hic saepe inventore provident vel iusto voluptates! Nemo, distinctio?</p>
+           </div>
+
+           <div class="col-md col-lg-6 col-xl-4">
+            <p class="bg-danger-subtle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti exercitationem odit quas similique doloremque non mollitia quisquam assumenda, magnam praesentium temporibus hic saepe inventore provident vel iusto voluptates! Nemo, distinctio?</p>
+           </div>
+
+           <div class="col-md col-lg-3 col-xl-4">
+            <p class="bg-success-subtle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti exercitationem odit quas similique doloremque non mollitia quisquam assumenda, magnam praesentium temporibus hic saepe inventore provident vel iusto voluptates! Nemo, distinctio?</p>
+           </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
